--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,49 @@
 html {
   background: #acb9c9 linear-gradient(#acb9c9, #636b75) fixed;
-  height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
-  padding: 50px 0;
-  margin: 0;
-  font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0 auto;
+  background: url("./img/checker.png") fixed;
+  font: 15px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #444;
   font-weight: 300;
-  background: url("../img/checker.png") fixed;
-  min-height: calc(100% - 100px);
+  width:1340px;
 }
 
-.wrapper {
+.main-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 740px 1fr;
+  min-height: 100vh;
+}
+
+.nw1,
+.tw1 {
+  position: fixed;
+  background: linear-gradient(#fafafa, #dedede 700px);
+  min-height: 300px;
+  width: 290px;
+  margin-top: 50px; 
+}
+
+.nw1 {
+  border-radius: 8px;
+  box-shadow: rgb(0 0 0 / 20%) 0 0 0 1px, rgb(0 0 0 / 45%) 1px 3px 10px;
+
+}
+
+.tw1 {
+  border-radius: 8px;
+  margin-left: 10px;
+}
+
+.cw1 {
+  margin-top: 50px; 
+  margin-bottom: 0px;
+}
+
+.cw2 {
   width: 740px;
   margin: 0 auto;
   background: #dedede;
@@ -23,11 +53,50 @@ body {
 
 header {
   border-radius: 8px 8px 0 0;
-  background: #4db64d;
   background: linear-gradient(#4db64d, #41a836);
   position: relative;
   padding: 15px 20px;
   border-bottom: 1px solid #b2d2e1;
+}
+
+
+header h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+  line-height: 1.2;
+  color: #f5faf5;
+}
+
+header p {
+  font-size: 13px;
+  color: #ffffff;
+  margin: 0;
+  text-shadow: rgba(210, 210, 210, 0.8) 0 1px 0;
+}
+
+.sections {
+  padding: 15px 20px;
+  font-size: 15px;
+  border-top: 1px solid #fff;
+  background: linear-gradient(#fafafa, #dedede 700px);
+  border-radius: 0 0 8px 8px;
+  position: relative;
+  min-height: 800px;
+}
+
+footer {
+  width: 640px;
+  margin: 0 auto;
+  padding: 5px 0 0;
+  color: #ddd;
+  overflow: hidden;
+  font-weight: 600;
+  font-size: 0.85em;
+}
+
+footer p {
+  float: left;
 }
 
 h1 {
@@ -51,49 +120,29 @@ h3 {
   margin-block-end: 0.5em;
 }
 
-h1, h2, h3 {
-    line-height: 1.1;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+h1,
+h2,
+h3 {
+  line-height: 1.1;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
-header h1 {
-  margin: 0;
-  padding: 0;
-  font-size: 24px;
-  line-height: 1.2;
-  color: #f5faf5;
-}
-
-header p {
-  font-size: 13px;
-  color: #ffffff;
-  margin: 0;
-  text-shadow: rgba(210,210,210,0.8) 0 1px 0;
-}
-
-.section {
-  padding: 15px 20px;
-  font-size: 15px;
-  border-top: 1px solid #fff;
-  background: linear-gradient(#fafafa, #dedede 700px);
-  border-radius: 0 0 8px 8px;
-  position: relative;
-}
-
-p, ul, ol {
+p,
+ul,
+ol {
   margin: 15px 0;
   text-align: justify;
-  text-justify: auto;
 }
 
 p.ignore {
   margin: 0;
   padding: 0;
-  text-align: left;	
+  text-align: left;
 }
 
-.cs, p.ignore {
+.cs,
+p.ignore {
   font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
   font-size: 13px;
   color: #222;
@@ -106,7 +155,7 @@ a {
 }
 
 a:hover {
-  color: #089;	
+  color: #089;
 }
 
 b {
@@ -133,7 +182,8 @@ b {
 }
 
 hr {
-    margin: 30px -20px;;
+  margin: 30px -20px;
+  ;
 }
 
 .cmt {
@@ -152,6 +202,50 @@ hr {
   color: #accfee;
 }
 
-.t-img {
-  vertical-align: middle;
+
+.tw1>div {
+  background: linear-gradient(#a1b147, #a8c050);
+  min-height: 35px;
+  display:flex;
+  align-items: center;
+  border-radius: 8px 8px 0 0;
+
 }
+
+.tw1 span {    
+  color: #fff;
+  font-weight: 500;
+  padding-left: 55px; 
+}
+
+.tw1 ul {
+  padding: 5px 22px;  
+}
+.tw1 li {
+  list-style-type: none;
+  line-height: 30px;
+  overflow: hidden;
+}
+
+.tw1 ul a:hover {
+  color: #0085f2;
+  border-left: 2px solid #999;
+  background-color: #f1f1f1;
+}
+
+.tw1 ul a.active {
+  color: #222;
+  border-left: 2px solid #0085f2;
+  background-color: #e9ebd8;
+  font-weight: 500;
+}
+
+.tw1 ul a {
+  display: inline-block;
+  width:100%;
+  color:#444;
+  font-weight: 400;
+  border-left: 2px solid #a8b3c0;
+  padding: 0.5rem 1rem;
+}
+
