--- a/css/main.css
+++ b/css/main.css
@@ -1,251 +1,254 @@
 html {
-  background: #acb9c9 linear-gradient(#acb9c9, #636b75) fixed;
-  scroll-behavior: smooth;
+    background: url("../img/checker.png") fixed;
+    scroll-behavior: smooth;
 }
 
 body {
-  margin: 0 auto;
-  background: url("./img/checker.png") fixed;
-  font: 15px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #444;
-  font-weight: 300;
-  width:1340px;
+    margin: 0 auto;    
+    font: 15px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #444;
+    font-weight: 300;
+    width:1340px;
 }
 
 .main-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 740px 1fr;
-  min-height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 740px 1fr;
+    min-height: 100vh;
 }
 
 .nw1,
 .tw1 {
-  position: fixed;
-  background: linear-gradient(#fafafa, #dedede 700px);
-  min-height: 300px;
-  width: 290px;
-  margin-top: 50px; 
+    position: fixed;
+    background: linear-gradient(#fafafa, #dedede 700px);
+    min-height: 300px;
+    width: 290px;
+    margin-top: 50px; 
 }
 
-.nw1 {
-  border-radius: 8px;
-  box-shadow: rgb(0 0 0 / 20%) 0 0 0 1px, rgb(0 0 0 / 45%) 1px 3px 10px;
-
+.nw1, .tw1 {
+    border-radius: 8px;
+    box-shadow: rgb(0 0 0 / 20%) 0 0 0 1px, rgb(0 0 0 / 45%) 0px 2px 10px;
+ 
 }
 
 .tw1 {
-  border-radius: 8px;
-  margin-left: 10px;
+    border-radius: 8px;
+    margin-left: 10px;
 }
 
 .cw1 {
-  margin-top: 50px; 
-  margin-bottom: 0px;
+    margin-top: 50px; 
+    margin-bottom: 0px;
 }
 
 .cw2 {
-  width: 740px;
-  margin: 0 auto;
-  background: #dedede;
-  border-radius: 8px;
-  box-shadow: rgb(0 0 0 / 20%) 0 0 0 1px, rgb(0 0 0 / 45%) 0 3px 10px;
+    width: 740px;
+    margin: 0 auto;
+    background: #dedede;
+    border-radius: 8px;
+    box-shadow: rgb(0 0 0 / 20%) 0 0 0 1px, rgb(0 0 0 / 45%) 0 3px 10px;
 }
 
 header {
-  border-radius: 8px 8px 0 0;
-  background: linear-gradient(#4db64d, #41a836);
-  position: relative;
-  padding: 15px 20px;
-  border-bottom: 1px solid #b2d2e1;
+    border-radius: 8px 8px 0 0;
+    background: linear-gradient(#c1d4c1, #d1ddcf);
+    position: relative;
+    padding: 15px 20px;
+    border-bottom: 1px solid #bbb;
 }
 
 
 header h1 {
-  margin: 0;
-  padding: 0;
-  font-size: 24px;
-  line-height: 1.2;
-  color: #f5faf5;
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+    line-height: 1.2;
+    color: #444;
 }
 
 header p {
-  font-size: 13px;
-  color: #ffffff;
-  margin: 0;
-  text-shadow: rgba(210, 210, 210, 0.8) 0 1px 0;
+    font-size: 13px;
+    color: #444;
+    margin: 0;
+    text-shadow: rgba(210, 210, 210, 0.8) 0 1px 0;
 }
 
 .sections {
-  padding: 15px 20px;
-  font-size: 15px;
-  border-top: 1px solid #fff;
-  background: linear-gradient(#fafafa, #dedede 700px);
-  border-radius: 0 0 8px 8px;
-  position: relative;
-  min-height: 800px;
+    padding: 15px 20px;
+    font-size: 15px;
+    border-top: 1px solid #ffffff;
+    background: linear-gradient(#fafafa, #e6e6e6 700px);
+    border-radius: 0 0 8px 8px;
+    position: relative;
+    min-height: 800px;
 }
 
 footer {
-  width: 640px;
-  margin: 0 auto;
-  padding: 5px 0 0;
-  color: #ddd;
-  overflow: hidden;
-  font-weight: 600;
-  font-size: 0.85em;
+    width: 640px;
+    margin: 0 auto;
+    padding: 5px 0 0;
+    color: #888;
+    overflow: hidden;
+    font-weight: 600;
+    font-size: 0.85em;
 }
 
 footer p {
-  float: left;
+    float: left;
 }
 
 h1 {
-  font-size: 28px;
-  color: #222;
-  margin-block-start: 0.67em;
-  margin-block-end: 0.67em;
+    font-size: 28px;
+    color: #222;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
 }
 
 h2 {
-  font-size: 1.5em;
-  color: #444;
-  margin-block-start: 0.67em;
-  margin-block-end: 0.5em;
+    font-size: 1.5em;
+    color: #444;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.5em;
 }
 
 h3 {
-  font-size: 1.17em;
-  color: #555;
-  margin-block-start: 0.83em;
-  margin-block-end: 0.5em;
+    font-size: 1.17em;
+    color: #555;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.5em;
 }
 
 h1,
 h2,
 h3 {
-  line-height: 1.1;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+    line-height: 1.1;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 p,
 ul,
 ol {
-  margin: 15px 0;
-  text-align: justify;
+    margin: 15px 0;
+    text-align: justify;
 }
 
 p.ignore {
-  margin: 0;
-  padding: 0;
-  text-align: left;
+    margin: 0;
+    padding: 0;
+    text-align: left;
 }
 
 .cs,
 p.ignore {
-  font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  font-size: 13px;
-  color: #222;
+    font-family: Monaco, 'Bitstream Vera Sans Mono', Lucida Console, Terminal;
+    font-size: 13px;
+    color: #222;
 }
 
 a {
-  color: #069;
-  text-decoration: none;
-  font-weight: 400;
+    color: #069;
+    text-decoration: none;
+    font-weight: 400;
 }
 
 a:hover {
-  color: #089;
+    color: #089;
 }
 
 b {
-  font-weight: 400;
-  font-size: 0.97em;
+    font-weight: 400;
+    font-size: 0.97em;
 }
 
 .c {
-  font-family: monospace;
-  font-size: 13px;
-  color: #222;
-  background: #cfcfcf;
-  padding: 2px 4px;
+    font-family: monospace;
+    font-size: 13px;
+    color: #222;
+    background: #cfcfcf;
+    padding: 2px 4px;
 }
 
 .fc {
-  padding: 20px;
-  margin: 15px -20px;
-  color: #f8f8f2;
-  background: #3a3c42;
-  font-size: 12px;
-  overflow-x: auto;
-  font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+    padding: 20px;
+    margin: 15px -20px;
+    color: #f8f8f2;
+    background: #3a3c42;
+    font-size: 12px;
+    overflow-x: auto;
+    font-family: Monaco, 'Bitstream Vera Sans Mono', Lucida Console, Terminal;
 }
 
 hr {
-  margin: 30px -20px;
-  ;
+    margin: 30px -20px;
+    ;
 }
 
 .cmt {
-  color: #a5ffa5;
+    color: #a5ffa5;
 }
 
 .k {
-  color: #f4bf75;
+    color: #f4bf75;
 }
 
 .t {
-  color: #de9fac;
+    color: #de9fac;
 }
 
 .m {
-  color: #accfee;
+    color: #accfee;
 }
 
 
 .tw1>div {
-  background: linear-gradient(#a1b147, #a8c050);
-  min-height: 35px;
-  display:flex;
-  align-items: center;
-  border-radius: 8px 8px 0 0;
+    background: linear-gradient(#c1d4c1, #d1ddcf);
+    min-height: 35px;
+    display:flex;
+    align-items: center;
+    border-bottom: solid 1px #ccc;
+    border-radius: 8px 8px 0 0;
 
 }
 
 .tw1 span {    
-  color: #fff;
-  font-weight: 500;
-  padding-left: 55px; 
+    color: #444;
+    font-weight: 500;
+    padding-top: 3px;
+    padding-left: 55px; 
+    font-weight: 600;
+    letter-spacing: 0.08rem;
 }
 
 .tw1 ul {
-  padding: 5px 22px;  
+    padding: 5px 22px;  
 }
 .tw1 li {
-  list-style-type: none;
-  line-height: 30px;
-  overflow: hidden;
+    list-style-type: none;
+    line-height: 30px;
+    overflow: hidden;
 }
 
 .tw1 ul a:hover {
-  color: #0085f2;
-  border-left: 2px solid #999;
-  background-color: #f1f1f1;
+    color: #0085f2;
+    border-left: 2px solid #999;
+    background-color: #f1f1f1;
 }
 
 .tw1 ul a.active {
-  color: #222;
-  border-left: 2px solid #0085f2;
-  background-color: #e9ebd8;
-  font-weight: 500;
+    color: #222;
+    border-left: 2px solid #0085f2;
+    background-color: #e9ebd8;
+    font-weight: 500;
 }
 
 .tw1 ul a {
-  display: inline-block;
-  width:100%;
-  color:#444;
-  font-weight: 400;
-  border-left: 2px solid #a8b3c0;
-  padding: 0.5rem 1rem;
+    display: inline-block;
+    width:100%;
+    color:#444;
+    font-weight: 400;
+    border-left: 2px solid #a8b3c0;
+    padding: 0.5rem 1rem;
 }
 
