--- a/css/main.css
+++ b/css/main.css
@@ -37,18 +37,21 @@ body {
 .nw1, .tw1 {
     border-radius: 8px;
     box-shadow: rgb(0 0 0 / 20%) 0 0 0 1px, rgb(0 0 0 / 45%) 0px 2px 10px;
- 
 }
 
 .nw1 .logoe {
-  border-top: double 3px #aeaeae;
   width: 200px;
-  border-bottom: double 3px #aeaeae;
 }
 
 .nw1 > div {
-  padding:25px;
+  border-bottom: double 3px #aeaeae;
 }
+
+.nw1>div>a {
+  display:inline-block;
+  width: 100%;
+}
+
 
 .tw1 {
     border-radius: 8px;
@@ -83,6 +86,8 @@ header h1 {
     font-size: 24px;
     line-height: 1.2;
     color: #444;
+    letter-spacing: 0.15rem; 
+    font-weight:300;
 }
 
 header p {
