divers-liens utiles

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ body {
     letter-spacing: 0.04rem;
     border-top: solid 1px #aeaeae;
     border-bottom: solid 1px #aeaeae;
-    padding: 5px;
+    padding: 7px 5px 5px 5px;
     color: #211705;
     font-weight: 400;
 }
